--- a/pom.xml
+++ b/pom.xml
@@ -217,6 +217,7 @@
             </plugin>
 
 
+
         </plugins>
     </build>
 
@@ -257,7 +258,7 @@
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>2.17</version>
                 <configuration>
-                    <configLocation>checkstyle-config.xml</configLocation>
+                    <configLocation>src/main/resources/checkstyle.xml</configLocation>
                     <!--<suppressionsLocation>checkstyle-supressions.xml</suppressionsLocation>-->
                 </configuration>
             </plugin>
@@ -267,6 +268,7 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
                 <version>2.3</version>
+                
                 <reportSets>
                     <reportSet>
                         <reports>
@@ -277,6 +279,7 @@
                     </reportSet>
                 </reportSets>
             </plugin>
+
 
             <!-- Surefire -->
             <plugin>
