--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <packaging>jar</packaging>
 
     <name>Typer</name>
-    <description>TODO</description>
+    <description>This game is inspired by the "Typing of the Dead".</description>
     <url>https://github.com/</url>
 
     <organization>
