--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         </license>
     </licenses>
     
-        <scm>
+    <scm>
         <connection>scm:git:git@github.com:marcika/typerv2.git</connection>
         <url>scm:git:git@github.com:marcika/typerv2.git</url>
         <developerConnection>scm:git:git@github.com:marcika/typerv2.git</developerConnection>
@@ -138,16 +138,16 @@
 
         <plugins>
 
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.7.0</version>
-            <configuration>
-                <compilerArguments>
-                    <bootclasspath>${sun.boot.class.path}${path.separator}${java.home}/lib/jfxrt.jar</bootclasspath>
-                </compilerArguments>
-            </configuration>
-        </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
+                <configuration>
+                    <compilerArguments>
+                        <bootclasspath>${sun.boot.class.path}${path.separator}${java.home}/lib/jfxrt.jar</bootclasspath>
+                    </compilerArguments>
+                </configuration>
+            </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -194,7 +194,42 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin> 
+                <groupId>org.jacoco</groupId> 
+                <artifactId>jacoco-maven-plugin</artifactId> 
+                <version>0.8.0</version> 
+                <configuration> 
+                    <rules> 
+                        <rule implementation="org.jacoco.maven.RuleConfiguration"> 
+                            <element>BUNDLE</element> 
+                            <limits> 
+                                <limit implementation="org.jacoco.report.check.Limit"> 
+                                    <counter>INSTRUCTION</counter> 
+                                    <value>COVEREDRATIO</value> 
+                                    <minimum>0.80</minimum> 
+                                </limit> 
+                            </limits> 
+                        </rule> 
+                    </rules> 
+                </configuration> 
+                <executions> 
+                    <execution> 
+                        <id>prepare-agent</id> 
+                        <goals> 
+                            <goal>prepare-agent</goal> 
+                        </goals> 
+                    </execution> 
+                    <execution> 
+                        <id>post-unit-test</id> 
+                        <phase>test</phase> 
+                        <goals> 
+                            <goal>report</goal> 
+                        </goals> 
+                    </execution> 
+                </executions> 
+            </plugin> 
         </plugins>
+        
     </build>
 
 
@@ -205,7 +240,6 @@
                 <artifactId>maven-project-info-reports-plugin</artifactId>
                 <version>2.9</version>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jxr-plugin</artifactId>
@@ -214,7 +248,6 @@
                     <linkJavadoc>true</linkJavadoc>
                 </configuration>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
@@ -224,7 +257,6 @@
                     <quiet>true</quiet>
                 </configuration>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
@@ -233,12 +265,10 @@
                     <configLocation>src/main/resources/checkstyle-config.xml</configLocation>
                 </configuration>
             </plugin>
-
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
-                <version>2.5</version>
-                
+                <version>2.3</version>
                 <reportSets>
                     <reportSet>
                         <reports>
@@ -249,20 +279,25 @@
                     </reportSet>
                 </reportSets>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
                 <version>2.21.0</version>
             </plugin>
-
+            
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.0</version>
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <report>report</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
             </plugin>
-
-        </plugins>
-    </reporting>
+</plugins>
+</reporting>
 
 </project>
