--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 
     <organization>
         <name>Márton Szabó</name>
-        <url>https://github.com/marcikaa/typerV2</url>
+        <url>https://github.com/marcikaa</url>
     </organization>
     <inceptionYear>2018</inceptionYear>
 
